style(header): fix spacing and colors

--- a/src/assets/css/_layout.css
+++ b/src/assets/css/_layout.css
@@ -4,7 +4,8 @@ body {
 
 ul,
 ol {
-    padding-inline-start: var(--space-xs);
+    padding: 0;
+    margin: 0;
 }
 
 .flow > * + * {
